--- a/packages/uni-components/style/picker-view-column.css
+++ b/packages/uni-components/style/picker-view-column.css
@@ -99,7 +99,7 @@ uni-picker-view-column[hidden] {
   color: #e5e5e5;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   .uni-picker-view-indicator:before {
     border-top-color: var(--UI-FG-3);
   }
@@ -114,4 +114,4 @@ uni-picker-view-column[hidden] {
       ),
       linear-gradient(0deg, rgba(35, 35, 35, 0.95), rgba(35, 35, 35, 0.6));
   }
-}
+} */
